Fixed play icon is cut off in video pop up, careers details page description and program landing #205 #181

--- a/app/assets/stylesheets/module/_great-jobs.scss
+++ b/app/assets/stylesheets/module/_great-jobs.scss
@@ -155,7 +155,7 @@
 
   @include m('more') {
     @extend %relative;
-    max-height: rem(44);
+    max-height: rem(43);
 
     &:before {
       content: '...';
